small readability fixes
- Added regions to css files
- Typo correction

--- a/celatus/src/main/resources/com/celatus/styles/default.css
+++ b/celatus/src/main/resources/com/celatus/styles/default.css
@@ -1,4 +1,4 @@
-/* -------------------------All windows------------------------- */
+/* #region -------------------------All windows------------------------- */
 
 .RootPane {
     -fx-background-color : #3e3e3e;
@@ -136,23 +136,26 @@
 #rowPane1 {
     -fx-background-color: #2b2b2b;
     -fx-border-color: #8c8c8c;
-    -fx-border-width: 0 0 1 0
+    -fx-border-width: 0 0 1 0;
 }
 
 #bottomRow {
     -fx-border-color: #8c8c8c;
-    -fx-border-width: 1 0 0 0
+    -fx-border-width: 1 0 0 0;
 }
 
+/* #endregion */
 
-/* -------------------------Setup window------------------------- */
+/* #region -------------------------Setup window------------------------- */
 
 #warningLabel {
     -fx-text-fill: #ff7b00;
     -fx-font-size: 14px;
 }
 
-/* -------------------------Main window------------------------- */
+/* #endregion */
+
+/* #region -------------------------Main window------------------------- */
 
 #searchBar {
     -fx-border-color: #8c8c8c;
@@ -270,7 +273,9 @@
     
 }
 
-/* -------------------------View Password Window------------------------- */
+/* #endregion */
+
+/* #region -------------------------View Password Window------------------------- */
 
 #recordsTable {
     -fx-background-color: transparent;
@@ -325,3 +330,5 @@
     -fx-pref-height: 0;
     -fx-max-height: 0;
 }
+
+/* #endregion */
